# keepassxc

./: CMakeLists.txt
cmake/: FindMinizip.cmake
src/: CMakeLists.txt  config-keepassx.h.cmake
src/autotype/: AutoType.cpp  CMakeLists.txt
src/autotype/mac/: CMakeLists.txt
src/autotype/test/: CMakeLists.txt
src/autotype/windows/: CMakeLists.txt
src/autotype/xcb/: CMakeLists.txt
src/browser/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/core/: Entry.cpp  Entry.h  Global.h  Group.cpp
src/crypto/: CMakeLists.txt
src/fdosecrets/: CMakeLists.txt
src/fdosecrets/widgets/: SettingsWidgetFdoSecrets.cpp
src/format/: KdbxXmlReader.cpp  KdbxXmlWriter.cpp  KdbxXmlWriter.h
src/gui/: DatabaseIcons.cpp  DatabaseIcons.h  DatabaseWidget.cpp  DetailsWidget.cpp  DetailsWidget.ui  EditWidget.cpp  EditWidget.h  EditWidget.ui  EditWidgetIcons.cpp  GuiTools.cpp  GuiTools.h  IconModels.cpp
src/gui/entry/: AutoTypeMatchModel.cpp  EditEntryWidget.cpp  (+2 more)
src/keeshare/: CMakeLists.txt  KeeShare.cpp  KeeShare.h  KeeShareSettings.cpp  KeeShareSettings.h  SettingsWidgetKeeShare.cpp  SettingsWidgetKeeShare.h  ShareExport.cpp  ShareImport.cpp  ShareObserver.cpp
src/proxy/: CMakeLists.txt
src/qrcode/: CMakeLists.txt
src/sshagent/: CMakeLists.txt
tests/: CMakeLists.txt  TestAutoType.cpp  TestCli.cpp  TestDatabase.cpp  TestDeletedObjects.cpp  TestEntryModel.cpp  TestKdbx2.cpp  TestKdbx3.cpp  TestKdbx4.cpp  TestKeePass1Reader.cpp  TestKeePass2Format.cpp  TestKeys.cpp  TestModified.cpp  TestOpVaultReader.cpp  TestSharing.cpp
tests/gui/: TestGui.cpp  TestGuiPixmaps.cpp
(+1 files in other folders)
